--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="/logo.png" type="image/x-icon" />
+        <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Gamer Zone | By Gamers for Gamers</title>
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
-        
+        <script src="bower_components/aos/dist/aos.js"></script>
     </body>
 </html>
